--- a/landingView.html
+++ b/landingView.html
@@ -74,9 +74,13 @@
 			
 			<h2 class="title">Cronograma</h2>
 			<div id="container__description">
-				<h3 class="description">Horarios y detalles de todas las actividades programadas.</h3>
+				<h3 class="description"><li>Horarios y detalles de todas las actividades programadas.</li></h3>
 			</div>
-			<button class="btn mapa">Ver mapa</button>
+			<button class="btn mapa">Ver Cronograma
+				<svg width="34" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M0 10H31M31 10L23 2M31 10L23 17.5" stroke="#334F53" stroke-width="4"/>
+				</svg>	
+			</button>
 		</div>
 
 		<div id="window__mapeo">
@@ -85,18 +89,27 @@
 					<rect width="365" height="400" fill="#E5EAD4"/>
 					<path d="M183 131.25H183.111M149.75 290.5L83.25 256.375V108.5L105.417 119.875M149.75 290.5L216.25 256.375M149.75 290.5V222.25M216.25 256.375L282.75 290.5V142.625L260.583 131.25M216.25 256.375V222.25M216.25 133.525C216.25 153.628 199.625 169.925 183 188.125C166.375 169.925 149.75 153.628 149.75 133.525C149.75 113.422 164.636 97.125 183 97.125C201.364 97.125 216.25 113.422 216.25 133.525Z" stroke="#45936C" stroke-width="18.0833" stroke-linecap="round" stroke-linejoin="round"/>
 				</svg>
+				<h2 class="title">Mapeo Digital</h2>
+				<div id="container__description">
+					<h3 class="description"><li>Mapeo de la escuela con los salones disponibles,sus capacidades y eventos en tiempo real.</li></h3>
+				</div>
+				<button class="btn mapa">Ver mapa
+					<svg width="30" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M0 10H31M31 10L23 2M31 10L23 17.5" stroke="#334F53" stroke-width="4"/>
+					</svg>
+				</button>
 			</div>
-			<h2 class="title">Mapeo Digital</h2>
-			<div id="container__description">
-				<h3 class="description">Mapeo de la escuela con los salones disponibles,sus capacidades y eventos en tiempo real.</h3>
-			</div>
-			<button class="btn mapa">Ver mapa</button>
+			
 		</div>
 
 		<footer>
 
 			<div id="footer">
-				<p>sayc@gmail.com</p>
+				<img src="static/img/logo_sayc.png" class="landing_logo" alt="logo_sayc">
+					
+				<div>Contacto</div>
+				<div>Contacto</div>
+				<div>Contacto</div>
 			</div>
 			
 		</footer>
