--- a/landingView.html
+++ b/landingView.html
@@ -103,15 +103,19 @@
 		</div>
 
 		<footer>
-
-			<div id="footer">
-				<img src="static/img/logo_sayc.png" class="landing_logo" alt="logo_sayc">
-					
-				<div>Contacto</div>
-				<div>Contacto</div>
-				<div>Contacto</div>
-			</div>
 			
+			<div id="footer">
+				<div><img src="static/img/logo_sayc.png" class="landing_logo" alt="logo_sayc"></div>
+				<div id="contacto">
+					<span>
+					<img width="70" height="70" src="static/img/logo_instagram.svg" class="instagram_logo" alt="logo_instagram">
+					Contacto</span>
+					<span>
+					<img width="50" height="50" src="static/img/logo_facebook.svg" class="instagram_logo" alt="facebook_logo">
+					@sayc.tortuguitas</span>
+					<span>Comunidad Educativa “Roberto Arlt”</span>
+				</div>
+			</div>
 		</footer>
 
 	</div>
