--- a/landingView.html
+++ b/landingView.html
@@ -55,7 +55,8 @@
 			<h2 class="title">Aplicación SAyC</h2>
 		</div>
 
-		<div id="window__cronograma">
+		<div id="window__mapeo">
+			
 			<svg width="365" height="400" viewBox="0 0 365 400" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<rect width="365" height="400" fill="#E5EAD4"/>
 				<path d="M139.781 182.162H114.466V206.323H139.781V182.162Z" fill="#45936C"/>
@@ -71,34 +72,43 @@
 				<path d="M125.545 125.138H152.109C154.359 125.138 156.189 123.404 156.189 121.271V86.1972C156.189 80.8319 151.577 76.467 145.907 76.467H131.748C126.078 76.467 121.465 80.8315 121.465 86.1972V121.271C121.465 123.404 123.295 125.138 125.545 125.138Z" fill="#45936C"/>
 				<path d="M212.697 125.138H239.576C241.739 125.138 243.498 123.47 243.498 121.422V86.0477C243.498 80.7655 238.957 76.467 233.373 76.467H218.899C213.316 76.467 208.775 80.7655 208.775 86.0477V121.422C208.775 123.47 210.534 125.138 212.697 125.138Z" fill="#45936C"/>
 			</svg>	
-			
-			<h2 class="title">Cronograma</h2>
-			<div id="container__description">
-				<h3 class="description"><li>Horarios y detalles de todas las actividades programadas.</li></h3>
-			</div>
-			<button class="btn mapa">Ver Cronograma
-				<svg width="34" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<div id="texto">
+				<div>
+					<h2 class="title">Cronograma</h2>
+						
+					<div id="container__description">
+						<h3 class="description"><li>Horarios y detalles de todas las actividades programadas.</li></h3>
+					</div>
+				</div>
+				<button class="btn_crono">Ver Cronograma
+					<svg width="34" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path d="M0 10H31M31 10L23 2M31 10L23 17.5" stroke="#334F53" stroke-width="4"/>
-				</svg>	
-			</button>
+					</svg>	
+				</button>
+	
+			</div>
 		</div>
 
 		<div id="window__mapeo">
-			<div>
-				<svg width="365" height="400" viewBox="0 0 365 400" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<rect width="365" height="400" fill="#E5EAD4"/>
-					<path d="M183 131.25H183.111M149.75 290.5L83.25 256.375V108.5L105.417 119.875M149.75 290.5L216.25 256.375M149.75 290.5V222.25M216.25 256.375L282.75 290.5V142.625L260.583 131.25M216.25 256.375V222.25M216.25 133.525C216.25 153.628 199.625 169.925 183 188.125C166.375 169.925 149.75 153.628 149.75 133.525C149.75 113.422 164.636 97.125 183 97.125C201.364 97.125 216.25 113.422 216.25 133.525Z" stroke="#45936C" stroke-width="18.0833" stroke-linecap="round" stroke-linejoin="round"/>
-				</svg>
-				<h2 class="title">Mapeo Digital</h2>
+			
+			<svg width="365" height="400" viewBox="0 0 365 400" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<rect width="365" height="400" fill="#E5EAD4"/>
+				<path d="M183 131.25H183.111M149.75 290.5L83.25 256.375V108.5L105.417 119.875M149.75 290.5L216.25 256.375M149.75 290.5V222.25M216.25 256.375L282.75 290.5V142.625L260.583 131.25M216.25 256.375V222.25M216.25 133.525C216.25 153.628 199.625 169.925 183 188.125C166.375 169.925 149.75 153.628 149.75 133.525C149.75 113.422 164.636 97.125 183 97.125C201.364 97.125 216.25 113.422 216.25 133.525Z" stroke="#45936C" stroke-width="18.0833" stroke-linecap="round" stroke-linejoin="round"/>
+			</svg>
+			<div id="texto"> 
+				<div>
+				<h2 class="title">Mapeo Digital</h2> 
 				<div id="container__description">
 					<h3 class="description"><li>Mapeo de la escuela con los salones disponibles,sus capacidades y eventos en tiempo real.</li></h3>
 				</div>
-				<button class="btn mapa">Ver mapa
+				</div>
+				<button class="btn_mapa">Ver mapa
 					<svg width="30" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M0 10H31M31 10L23 2M31 10L23 17.5" stroke="#334F53" stroke-width="4"/>
 					</svg>
 				</button>
 			</div>
+			
 			
 		</div>
 
