--- a/index.html
+++ b/index.html
@@ -28,8 +28,32 @@
 			<img src="static/img/logo_sayc.png" class="landing_logo" alt="logo_sayc">
 			<h1 class="landing__title">SAyC</h1>
 		</div>
-
+		<div class="gridBox">
+			<div class="caja1"></div>
+			<div class="caja1"></div>
+			<div class="caja1"></div>
+			<div class="caja2"></div>
+			<div class="caja2"></div>
+			<div class="caja1"></div>
+			<div class="caja2"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<div class="caja2"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+		</div>
 		<div id="window">
+
+			<div class="cardWindows">
+				<h2 class="title">¿Qué es SAyC?</h2>
+				<div class="descripcionContent">
+					<h3 class="descripcion"></h3>
+					<div class="icono">
+						<h2 class="numero">1</h2>
+						<div class="icono"></div>
+					</div>
+				</div>
+			</div>
 			<div id="window__descripcion">
 				<h2 class="title">¿Qué es SAyC?</h2>
 				<div id="container__description">
@@ -37,7 +61,7 @@
 				</div>
 			</div>
 
-			<div id="window__objetivo">
+			<!-- <div id="window__objetivo">
 				<h2 class="title">Objetivos</h2>
 				<div id="container__description">
 					<h3 class="description">El objetivo de la SAyC es demostrar lo aprendido mediante proyectos, actuaciones, talleres, entre otras actividades. Los alumnos, junto con los profesores, organizan y llevan a cabo estas actividades durante tres días.</h3>
@@ -48,7 +72,22 @@
 				<div id="container__description">
 					<h3 class="description">Para garantizar un desarrollo ordenado del evento, se asignan dos guías identificados por un carnet y una remera naranja a cada curso. Se brinda una planilla con horarios y se utiliza todo el espacio disponible en la escuela para albergar las actividades.</h3>
 				</div>
-			</div>
+			</div> -->
+		</div>
+
+		<div class="gridBox">
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<div class="caja2"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<div class="caja2"></div>
+			<div class="caja1"></div>
+			<div class="caja2"></div>
+			<div class="caja2"></div>
 		</div>
 	
 		<div id="window__aplicacion">
