--- a/index.html
+++ b/index.html
@@ -72,20 +72,21 @@
 				<path d="M125.545 125.138H152.109C154.359 125.138 156.189 123.404 156.189 121.271V86.1972C156.189 80.8319 151.577 76.467 145.907 76.467H131.748C126.078 76.467 121.465 80.8315 121.465 86.1972V121.271C121.465 123.404 123.295 125.138 125.545 125.138Z" fill="#45936C"/>
 				<path d="M212.697 125.138H239.576C241.739 125.138 243.498 123.47 243.498 121.422V86.0477C243.498 80.7655 238.957 76.467 233.373 76.467H218.899C213.316 76.467 208.775 80.7655 208.775 86.0477V121.422C208.775 123.47 210.534 125.138 212.697 125.138Z" fill="#45936C"/>
 			</svg>	
-			<div id="texto">
-				<div>
+			<div id="window__cronograma">
+				<div id="texto">
+					<div>
 					<h2 class="title">Cronograma</h2>
-						
 					<div id="container__description">
 						<h3 class="description"><li>Horarios y detalles de todas las actividades programadas.</li></h3>
 					</div>
 				</div>
-				<button class="btn_crono">Ver Cronograma
-					<svg width="34" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0 10H31M31 10L23 2M31 10L23 17.5" stroke="#334F53" stroke-width="4"/>
-					</svg>	
-				</button>
-	
+			
+					<button class="btn_crono">Ver Cronograma
+						<svg width="34" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0 10H31M31 10L23 2M31 10L23 17.5" stroke="#334F53" stroke-width="4"/>
+						</svg>	
+					</button>
+				</div>
 			</div>
 		</div>
 
@@ -114,16 +115,23 @@
 
 		<footer>
 			
-			<div id="footer">
-				<div><img src="static/img/logo_sayc.png" class="landing_logo" alt="logo_sayc"></div>
-				<div id="contacto">
-					<span>
-					<img width="70" height="70" src="static/img/logo_instagram.svg" class="instagram_logo" alt="logo_instagram">
-					Contacto</span>
-					<span>
-					<img width="50" height="50" src="static/img/logo_facebook.svg" class="instagram_logo" alt="facebook_logo">
-					@sayc.tortuguitas</span>
+			<div id="window__footer">
+					<div>
+						<img src="static/img/logo_sayc.png" class="landing_logo" alt="logo_sayc">
+					</div>
+						<div id="contacto">
+						<h1> Contacto</h1>
+						<br>
+						<h2></h2>
+						<img width="70" height="70" src="static/img/logo_instagram.svg" class="instagram_logo" alt="logo_instagram">
+						<br>
+						<img width="50" height="50" src="static/img/logo_facebook.svg" class="instagram_logo" alt="facebook_logo">
+					</div>
+					<div>
+											
 					<span>Comunidad Educativa “Roberto Arlt”</span>
+					</div>
+						@sayc.tortuguitas
 				</div>
 			</div>
 		</footer>
