--- a/index.html
+++ b/index.html
@@ -28,8 +28,32 @@
 			<img src="static/img/logo_sayc.png" class="landing_logo" alt="logo_sayc">
 			<h1 class="landing__title">SAyC</h1>
 		</div>
-
+		<div class="gridBox">
+			<div class="caja1"></div>
+			<div class="caja1"></div>
+			<div class="caja1"></div>
+			<div class="caja2"></div>
+			<div class="caja2"></div>
+			<div class="caja1"></div>
+			<div class="caja2"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<div class="caja2"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+		</div>
 		<div id="window">
+
+			<!-- <div class="cardWindows">
+				<h2 class="title">¿Qué es SAyC?</h2>
+				<div class="descripcionContent">
+					<h3 class="descripcion"></h3>
+					<div class="icono">
+						<h2 class="numero">1</h2>
+						<div class="icono"></div>
+					</div>
+				</div>
+			</div> -->
 			<div id="window__descripcion">
 				<h2 class="title">¿Qué es SAyC?</h2>
 				<div id="container__description">
@@ -49,6 +73,21 @@
 					<h3 class="description">Para garantizar un desarrollo ordenado del evento, se asignan dos guías identificados por un carnet y una remera naranja a cada curso. Se brinda una planilla con horarios y se utiliza todo el espacio disponible en la escuela para albergar las actividades.</h3>
 				</div>
 			</div>
+		</div>
+
+		<div class="gridBox">
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<!-- <div class="caja3"></div>
+			<div class="caja2"></div>
+			<div class="caja3"></div>
+			<div class="caja3"></div>
+			<div class="caja2"></div>
+			<div class="caja1"></div>
+			<div class="caja2"></div>
+			<div class="caja2"></div> -->
 		</div>
 	
 		<div id="window__aplicacion">
@@ -73,19 +112,18 @@
 				<path d="M212.697 125.138H239.576C241.739 125.138 243.498 123.47 243.498 121.422V86.0477C243.498 80.7655 238.957 76.467 233.373 76.467H218.899C213.316 76.467 208.775 80.7655 208.775 86.0477V121.422C208.775 123.47 210.534 125.138 212.697 125.138Z" fill="#45936C"/>
 			</svg>	
 			<div id="texto">
-				<div>
-					<h2 class="title">Cronograma</h2>
-						
-					<div id="container__description">
-						<h3 class="description"><li>Horarios y detalles de todas las actividades programadas.</li></h3>
-					</div>
+				<h2 class="title">Cronograma</h2>
+					
+				<div id="container__description">
+					<h3 class="description"><li>Horarios y detalles de todas las actividades programadas.</li></h3>
 				</div>
-				<button class="btn_crono">Ver Cronograma
-					<svg width="34" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0 10H31M31 10L23 2M31 10L23 17.5" stroke="#334F53" stroke-width="4"/>
-					</svg>	
-				</button>
-	
+				<div id="container__btn">
+					<button class="btn">Ver Cronograma
+						<svg width="34" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M0 10H31M31 10L23 2M31 10L23 17.5" stroke="#334F53" stroke-width="4"/>
+						</svg>	
+					</button>
+				</div>
 			</div>
 		</div>
 
@@ -96,17 +134,17 @@
 				<path d="M183 131.25H183.111M149.75 290.5L83.25 256.375V108.5L105.417 119.875M149.75 290.5L216.25 256.375M149.75 290.5V222.25M216.25 256.375L282.75 290.5V142.625L260.583 131.25M216.25 256.375V222.25M216.25 133.525C216.25 153.628 199.625 169.925 183 188.125C166.375 169.925 149.75 153.628 149.75 133.525C149.75 113.422 164.636 97.125 183 97.125C201.364 97.125 216.25 113.422 216.25 133.525Z" stroke="#45936C" stroke-width="18.0833" stroke-linecap="round" stroke-linejoin="round"/>
 			</svg>
 			<div id="texto"> 
-				<div>
 				<h2 class="title">Mapeo Digital</h2> 
 				<div id="container__description">
 					<h3 class="description"><li>Mapeo de la escuela con los salones disponibles,sus capacidades y eventos en tiempo real.</li></h3>
 				</div>
+				<div id="container__btn">
+					<button class="btn">Ver mapa
+						<svg width="30" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0 10H31M31 10L23 2M31 10L23 17.5" stroke="#334F53" stroke-width="4"/>
+						</svg>
+					</button>
 				</div>
-				<button class="btn_mapa">Ver mapa
-					<svg width="30" height="19" viewBox="0 0 34 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M0 10H31M31 10L23 2M31 10L23 17.5" stroke="#334F53" stroke-width="4"/>
-					</svg>
-				</button>
 			</div>
 			
 			
